--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "1.0.0",
   "description": "Node.js on Docker",
   "author": "First Last <first.last@example.com>",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.16.1",
+    "tmi.js": "^1.8.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.6.1",
+    "@types/tmi.js": "^1.7.2",
+    "@types/uuid": "8.3.1",
+    "nodemon": "^1.18.10",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5",
+    "uuid": "8.3.2"
   }
 }
