--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "author": "First Last <first.last@example.com>",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start-dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.16.1",
+    "tmi.js": "^1.8.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
