--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.16.1",
+    "screenshot-desktop": "^1.12.7",
     "tesseract.js": "^2.1.5",
     "tmi.js": "^1.8.5"
   },
