--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start-dev": "nodemon src/index.js"
+    "start-dev": "nodemon src/index.js",
+    "start-stardewvalley": "node src/Runners/StardewValleyRunner.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.16.1",
     "screenshot-desktop": "^1.12.7",
