--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start-dev": "nodemon src/index.js",
+    "dev": "ts-node-dev src/index.ts",
     "start-stardewvalley": "node src/Runners/StardewValleyRunner.js"
   },
   "dependencies": {
@@ -18,6 +18,11 @@
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.13",
+    "@types/screenshot-desktop": "^1.12.0",
+    "nodemon": "^1.18.10",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.2"
   }
 }
