--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     env_file:
       - ./.env
     ports:
-      - "80:80"
+      - $SERVER_PORT:$SERVER_PORT
     volumes:
       - .:/home/node/app
       - node_modules:/home/node/app/node_modules
