--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,9 @@ POST=80
 TENOR_GIF_API_KEY=
 BOT_NAME=
 BOT_OAUTH_TOKEN=
+BOT_OAUTH_TOKEN_ONLY_KEY=
 CHANNEL_NAME=
 CHANNEL_ID=
+
+BOT_CLIENT_ID=
+BOT_CLIENT_SECRET=
