--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/screenshot-desktop": "^1.12.0",
+    "@types/tmi.js": "^1.8.0",
     "nodemon": "^1.18.10",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
