--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.16.1",
+    "obs-websocket-js": "^4.0.3",
     "screenshot-desktop": "^1.12.7",
     "tesseract.js": "^2.1.5",
     "tmi.js": "^1.8.5"
