--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 POST=80
 
-TENOR_GIF_API_KEY=
 BOT_NAME=
 BOT_OAUTH_TOKEN=
 BOT_OAUTH_TOKEN_ONLY_KEY=
@@ -9,3 +8,6 @@ CHANNEL_ID=
 
 BOT_CLIENT_ID=
 BOT_CLIENT_SECRET=
+
+TRENOR_URI=https://g.tenor.com/v1
+TENOR_GIF_API_KEY=
