--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-POST=80
+PORT=8080
+
+SCENE_NAME=
+OBS_WEBSOCKET_URL=
+OBS_WEBSOCKET_PASSWORD=
 
 BOT_NAME=
 BOT_OAUTH_TOKEN=
@@ -9,5 +13,5 @@ CHANNEL_ID=
 BOT_CLIENT_ID=
 BOT_CLIENT_SECRET=
 
-TRENOR_URI=https://g.tenor.com/v1
+TENOR_URI=https://g.tenor.com/v1
 TENOR_GIF_API_KEY=
