--- a/package.json
+++ b/package.json
@@ -18,16 +18,11 @@
     "axios": "~1.1.3",
     "dotenv": "~16.0.3",
     "express": "~4.18.2",
-    "obs-websocket-js": "~5.0.2",
-    "screenshot-desktop": "~1.12.7",
-    "tesseract.js": "~2.1.5",
-    "tmi.js": "~1.8.5"
+    "obs-websocket-js": "~5.0.2"
   },
   "devDependencies": {
     "@types/axios": "~0.14.0",
     "@types/express": "~4.17.14",
-    "@types/screenshot-desktop": "~1.12.0",
-    "@types/tmi.js": "~1.8.2",
     "nodemon": "~2.0.20",
     "ts-node-dev": "~2.0.0",
     "typescript": "~4.8.4"
