--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "ts-node-dev src/index.ts",
-    "start-stardewvalley": "ts-node-dev src/Runners/StardewValleyRunner.ts"
+    "start-stardewvalley": "ts-node-dev src/Runners/StardewValleyRunner.ts",
+    "build": "tsc && copyfiles -u 1 src/**/*.html out/ && copyfiles -u 1 src/**/*.css out/"
   },
   "dependencies": {
     "@twurple/api": "~5.2.7",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/axios": "~0.14.0",
     "@types/express": "~4.17.14",
+    "copyfiles": "^2.4.1",
     "nodemon": "~2.0.20",
     "ts-node-dev": "~2.0.0",
     "typescript": "~4.8.4"
