--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "express": "~4.18.2",
     "obs-websocket-js": "~5.0.2",
     "reflect-metadata": "^0.2.2",
+    "sound-play": "^1.1.0",
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
-    "@types/axios": "~0.14.0",
     "@types/express": "~4.17.14",
+    "@types/sound-play": "^1.1.3",
     "copyfiles": "^2.4.1",
     "nodemon": "~2.0.20",
     "ts-node-dev": "~2.0.0",
